--- a/think-domain/build.gradle
+++ b/think-domain/build.gradle
@@ -3,9 +3,8 @@ plugins {
 }
 dependencies {
     api project(':think-client')
-    api 'com.alibaba.cola:cola-component-domain-starter:4.0.0'
-    api 'com.alibaba.cola:cola-component-exception:4.0.0'
-    api 'org.apache.commons:commons-lang3:3.11'
-    api 'commons-codec:commons-codec:1.14'
-    testImplementation 'junit:junit:4.13.1'
+    api("com.alibaba.cola:cola-component-domain-starter")
+    api("com.alibaba.cola:cola-component-exception")
+    api("org.apache.commons:commons-lang3")
+    api("commons-codec:commons-codec")
 }
