--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,10 @@
 root_version=0.0.1
-lombok_version=1.18.22
-hivemq_mqtt_client_version=1.3.0
-fastjson_version=1.2.79
-logback_version=1.2.10
-influxdb_version=2.21
 springboot_version=2.4.13
-jmockdata_version=4.3.0
-jackson_version=2.13.1
+lombok_version=1.18.22
+cola_version=4.1.0
+mybatis_version=2.2.2
+javax_el_version=3.0.0
+glassfish_version=2.2.6
+commons_lang3_version=3.12.0
+commons_codec_version=1.15
+fastjson_version=1.2.79
