--- a/think-infrastructure/build.gradle
+++ b/think-infrastructure/build.gradle
@@ -3,9 +3,7 @@ plugins {
 }
 dependencies {
     api project(':think-domain')
-    api 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
-    api 'mysql:mysql-connector-java:8.0.21'
-    api 'org.apache.commons:commons-lang3:3.11'
-    api 'com.alibaba:fastjson:1.2.73'
-    api 'org.springframework.boot:spring-boot-starter-test:2.3.4.RELEASE'
+    api("org.mybatis.spring.boot:mybatis-spring-boot-starter")
+    api("org.apache.commons:commons-lang3")
+    api("com.alibaba:fastjson")
 }
